--- a/website/app/application/core/projects/project/reviews/create.html
+++ b/website/app/application/core/projects/project/reviews/create.html
@@ -5,7 +5,8 @@
                 <label class="control-label col-xs-3">Review Title: <i class="fa fa-asterisk"></i></label>
 
                 <div class="col-xs-6">
-                    <input name="title" validator="required"  ng-model="model.title" class="form-control" type="text" placeholder="Title...">
+                    <input name="title" validator="required" ng-model="model.title" class="form-control" type="text"
+                           placeholder="Title...">
                 </div>
             </div>
             <div class="form-group">
@@ -21,7 +22,7 @@
             <div class="form-group">
                 <label class="control-label col-xs-3">Comment:</label>
 
-                <div  class="col-xs-8">
+                <div class="col-xs-8">
                     <text-angular ta-toolbar="[['h2', 'h5', 'h6', 'quote','bold','italics','underline'],
                               ['ul','ol', 'justifyLeft', 'insertLink', 'insertImage']]"
                                   ng-model="model.comment"></text-angular>
@@ -31,18 +32,38 @@
                 <label class="control-label col-xs-3">Select/Drag items:</label>
 
                 <div class="col-xs-8">
-                    <div ng-show="model.files.length == 0">
-                        <p class="text-muted"> None </p>
+                    <div class="row">
+                        <form role="form">
+                            <label style="outline: none;" class="radio-inline">
+                                <input type="radio" ng-model="itemType" value="samples">Samples
+                            </label>
+                            <label class="radio-inline">
+                                <input type="radio" ng-model="itemType" value="processes">Provenance
+                            </label>
+                            <label class="radio-inline">
+                                <input type="radio" ng-model="itemType" value="files">Files
+                            </label>
+                            <button ng-click="attachItem()" class="btn btn-xs btn-mini btn-primary">Add</button>
+                        </form>
                     </div>
-                    <div ng-repeat="item in model.files">
-                        {{item.fullname}}
-                        <button type="button" class="close" ng-click="removeFile($index);">&times;</button>
-                    </div>
+
                 </div>
-            </div><br>
+                <!--<div class="col-xs-8">-->
+                <!--<div ng-show="model.files.length == 0">-->
+                <!--<p class="text-muted"> None </p>-->
+                <!--</div>-->
+                <!--<div ng-repeat="item in model.files">-->
+                <!--{{item.fullname}}-->
+                <!--<button type="button" class="close" ng-click="removeFile($index);">&times;</button>-->
+                <!--</div>-->
+                <!--</div>-->
+            </div>
+            <br>
+
             <div class="form-group">
                 <label class="control-label col-xs-3"></label>
-                <button validation-submit="Form" ng-click="create()" class="btn btn-xs btn-mini btn-primary">Create</button>
+                <button validation-submit="Form" ng-click="create()" class="btn btn-xs btn-mini btn-primary">Create
+                </button>
                 <button ng-click="cancel()" class="btn btn-xs btn-mini btn-danger">Cancel</button>
             </div>
         </form>
