--- a/website/app/application/core/projects/project/home/directives/display-note.html
+++ b/website/app/application/core/projects/project/home/directives/display-note.html
@@ -11,6 +11,13 @@
         <i class="fa fa-fw"></i>
         <i class="fa fa-fw"></i>
     </span>
+
+    <p>
+        <button ng-if="bk.addToReview" class="btn btn-xs btn-mini btn-success" ng-click="addItem('review')">Add to review</button>
+        <button ng-if="bk.addToSample" class="btn btn-xs btn-mini btn-success" ng-click="addItem('sample')">Add to Sample</button>
+        <button ng-if="bk.addToProvenance" class="btn btn-xs btn-mini btn-success" ng-click="addItem('provenance')">Add to Provenance</button>
+        <button ng-if="bk.addToProvenance" class="btn btn-xs btn-mini btn-success" ng-click="addItem('file')">Add to File</button>
+    </p>
     <p>
         <small class="text-muted">{{note.mtime | toDateString}}</small>
         <small style="padding-left: 10px;" class="text-muted">{{note.creator}}</small>
