attachments functionality fixed

--- a/website/app/application/core/projects/project/home/directives/display-sample.html
+++ b/website/app/application/core/projects/project/home/directives/display-sample.html
@@ -17,9 +17,9 @@
     </span>
 
     <p>
-        <button ng-if="bk.addToReview" class="btn btn-xs btn-mini btn-success" ng-click="addItem('review')">Add to review</button>
-        <button ng-if="bk.addToProvenance" class="btn btn-xs btn-mini btn-success" ng-click="addItem('provenance')">Add to Provenance</button>
-        <button ng-if="bk.addToNote" class="btn btn-xs btn-mini btn-success" ng-click="addItem('note')">Add to Note</button>
+        <button ng-if="isActive('samples','addToReview')" class="btn btn-xs btn-mini btn-success" ng-click="addItem('review')">Add to review</button>
+        <!--<button ng-if="isActive('samples','addToProvenance')" class="btn btn-xs btn-mini btn-success" ng-click="addItem('provenance')">Add to Provenance</button>-->
+        <!--<button ng-if="isActive('samples','addToNote')" class="btn btn-xs btn-mini btn-success" ng-click="addItem('note')">Add to Note</button>-->
     </p>
 
     <p>
