--- a/website/app/application/directives/mc-tree.html
+++ b/website/app/application/directives/mc-tree.html
@@ -4,7 +4,7 @@
         drag="item"
         ng-repeat="item in items | orderBy:orderby | limitTo:500 as matches track by item.id">
         <mc-tree-display-item item="item"
-                              show-sideboard="true">
+                              show-sideboard="true" bk="bk">
         </mc-tree-display-item>
     </li>
     <li ng-show="matches.length === 0" class="home-item">
