--- a/website/app/application/core/projects/project/home/directives/display-note.html
+++ b/website/app/application/core/projects/project/home/directives/display-note.html
@@ -13,10 +13,10 @@
     </span>
 
     <p>
-        <button ng-if="bk.addToReview" class="btn btn-xs btn-mini btn-success" ng-click="addItem('review')">Add to review</button>
-        <button ng-if="bk.addToSample" class="btn btn-xs btn-mini btn-success" ng-click="addItem('sample')">Add to Sample</button>
-        <button ng-if="bk.addToProvenance" class="btn btn-xs btn-mini btn-success" ng-click="addItem('provenance')">Add to Provenance</button>
-        <button ng-if="bk.addToProvenance" class="btn btn-xs btn-mini btn-success" ng-click="addItem('file')">Add to File</button>
+        <button ng-if="isActive('notes','addToReview')" class="btn btn-xs btn-mini btn-success" ng-click="addItem('review')">Add to review</button>
+        <!--<button ng-if="isActive('notes','addToSample')" class="btn btn-xs btn-mini btn-success" ng-click="addItem('sample')">Add to Sample</button>-->
+        <!--<button ng-if="isActive('notes','addToProvenance')" class="btn btn-xs btn-mini btn-success" ng-click="addItem('provenance')">Add to Provenance</button>-->
+        <!--<button ng-if="isActive('notes','addToFile')" class="btn btn-xs btn-mini btn-success" ng-click="addItem('file')">Add to File</button>-->
     </p>
     <p>
         <small class="text-muted">{{note.mtime | toDateString}}</small>
