--- a/website/app/application/core/projects/project/home/directives/home-processes.html
+++ b/website/app/application/core/projects/project/home/directives/home-processes.html
@@ -19,7 +19,7 @@
         <input type="text" ng-model="search.name" class="pull-right col-xs-4"
                placeholder="Search processes...">
         <span class="add-item pull-right">
-            <a ui-sref="projects.project.provenance.create" tooltip="Add Process">
+            <a ng-click="createProvenance()" tooltip="Add Process">
                 <i class="fa fa-fw fa-plus"></i>
             </a>
         </span>
