changes to the sideboard expansion functionality

--- a/website/app/application/core/projects/project/home/directives/home-files.html
+++ b/website/app/application/core/projects/project/home/directives/home-files.html
@@ -5,7 +5,7 @@
             Files ({{matchingFiles.length | number}})
         </span>
         <span class="pull-right bar-control">
-            <a ng-click="splitScreen()">
+            <a ng-click="splitScreen('files', 'column1')">
                 <i class="fa fa-fw fa-columns"></i>
             </a>
             <a ng-click="toggleExpanded()">
