--- a/website/app/application/core/projects/project/home/directives/home-notes.html
+++ b/website/app/application/core/projects/project/home/directives/home-notes.html
@@ -8,7 +8,7 @@
             ({{notes.length}})
         </span>
         <span class="pull-right bar-control">
-            <a ng-click="splitScreen()">
+            <a ng-click="splitScreen('notes', 'column2')">
                 <i class="fa fa-fw fa-columns"></i>
             </a>
             <a ng-click="toggleExpanded()">
