--- a/website/app/application/core/projects/project/home/directives/home-processes.html
+++ b/website/app/application/core/projects/project/home/directives/home-processes.html
@@ -8,7 +8,7 @@
             ({{procs.length}})
         </span>
         <span class="pull-right bar-control">
-            <a ng-click="splitScreen()">
+            <a ng-click="splitScreen('processes', 'column2')">
                 <i class="fa fa-fw fa-columns"></i>
             </a>
             <a ng-click="toggleExpanded()">
