--- a/website/app/application/core/projects/project/home/directives/home-samples.html
+++ b/website/app/application/core/projects/project/home/directives/home-samples.html
@@ -6,7 +6,7 @@
             ({{samples.length}})
         </span>
         <span class="pull-right bar-control">
-            <a ng-click="splitScreen()">
+            <a ng-click="splitScreen('samples', 'column2')">
                 <i class="fa fa-fw fa-columns"></i>
             </a>
             <a ng-click="toggleExpanded()">
