--- a/website/app/application/core/projects/project/home/directives/home-sideboard.html
+++ b/website/app/application/core/projects/project/home/directives/home-sideboard.html
@@ -4,11 +4,17 @@
         <span>
             Items ({{matches.length | number}})
         </span>
+        <span class="pull-right bar-control">
+              <a ng-click="splitScreen('sideboard')">
+                  <i class="fa fa-fw fa-columns"></i>
+              </a>
         <a ng-click="toggleExpanded()"
            class="pull-right bar-control">
             <i class="fa"
                ng-class="{'fa-expand': !isExpanded(), 'fa-compress': isExpanded()}"></i>
         </a>
+        </span>
+
         <input type="text" ng-model="searchInput" class="pull-right col-xs-4"
                placeholder="Search sideboard...">
         <span class="add-item pull-right">
