--- a/website/app/application/core/projects/project/home/directives/home-samples.html
+++ b/website/app/application/core/projects/project/home/directives/home-samples.html
@@ -7,7 +7,8 @@
         </span>
         <span class="pull-right bar-control">
             <a ng-click="splitScreen('samples', 'column2')">
-                <i class="fa fa-fw fa-columns"></i>
+                <i class="fa fa-fw"
+                   ng-class="{'fa-columns': !isSplitExpanded(), 'fa-tablet': isSplitExpanded()}"></i>
             </a>
             <a ng-click="toggleExpanded()">
                 <i class="fa fa-fw"
