--- a/website/app/application/core/projects/project/home/directives/home-sideboard.html
+++ b/website/app/application/core/projects/project/home/directives/home-sideboard.html
@@ -23,17 +23,17 @@
         </span>
     </div>
     <div class="panel-body home-panel-body no-max-height">
-        <ul class="list-unstyled">
+        <ul  class="list-unstyled">
             <li class="home-item"
                 ui-draggable="true"
-                ui-on-drop="onDrop(i, $data)">
+                ui-on-drop="onDrop(i, $data, $event)">
                 <div class="dropzone">
                     <h4 class="text-center">
                         Drop here
                     </h4>
                 </div>
             </li>
-            <li class="home-item"
+            <li class="home-item" ui-draggable="true" drag="item"
                 ng-repeat="item in sideboard | filter:sideboardSearch | orderBy:'name' as matches">
                 <display-item item="item"
                               show-sideboard="false">
