--- a/website/app/application/core/projects/project/home/directives/home-files.html
+++ b/website/app/application/core/projects/project/home/directives/home-files.html
@@ -7,7 +7,7 @@
         <span class="pull-right bar-control">
             <a ng-click="splitScreen('files', 'column1')">
                 <i class="fa fa-fw"
-                   ng-class="{'fa-columns': !isSplitExpanded(), 'fa-tablet': isSplitExpanded()}"></i>
+                   ng-class="{'fa-columns': !isSplitExpanded(), 'fa-close mc-danger': isSplitExpanded()}"></i>
             </a>
             <a ng-click="toggleExpanded()">
                 <i class="fa fa-fw"
