--- a/website/app/application/core/projects/project/home/directives/home-sideboard.html
+++ b/website/app/application/core/projects/project/home/directives/home-sideboard.html
@@ -7,7 +7,7 @@
         <span ng-if="splitIcon" class="pull-right bar-control">
               <a ng-click="splitScreen('sideboard', 'column3')">
                   <i class="fa fa-fw"
-                     ng-class="{'fa-columns': !isSplitExpanded(), 'fa-tablet': isSplitExpanded()}"></i>
+                     ng-class="{'fa-columns': !isSplitExpanded(), 'fa-close mc-danger': isSplitExpanded()}"></i>
               </a>
         <a ng-click="toggleExpanded()"
            class="pull-right bar-control">
