Add on-enter directive file.

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -300,6 +300,7 @@
 <script src="application/directives/action-link.js"></script>
 <script src="application/directives/on-repeat-finished.js"></script>
 <script src="application/directives/mc-flow-button.js"></script>
+<script src="application/directives/on-enter.js"></script>
 
 <!-------------------------------- Global services --------------------------------->
 <script src="application/services/user-service.js"></script>
