--- a/website/app/application/directives/mc-tree-header.html
+++ b/website/app/application/directives/mc-tree-header.html
@@ -8,8 +8,8 @@
         <span style="color: #389dc1" ui-draggable="true" drag="item" >{{::item.displayname}}</span>
     </span>
     <span class="pull-right" style="padding-right: 15px;">
-        <span  ng-if="item.type === 'datafile'">
-            <a  ng-if="showSideboard"
+        <span ng-if="item.type === 'datafile'">
+            <a ng-if="showSideboard"
                ng-click="addToSideboard(item, $event)">
                 <i class="fa fa-fw fa-clipboard inactive" id="{{item.id}}"></i>
             </a>
@@ -24,8 +24,24 @@
                 <i class="fa fa-fw fa-close mc-danger"></i>
             </a>
         </span>
+        <a title="New Folder" ng-click="item.addFolder = !item.addFolder"><i ng-if="item.type === 'datadir'" class="fa fa-fw fa-plus"></i></a>
+
         <mc-flow-button dir="item" ng-if="item.type === 'datadir'"></mc-flow-button>
     </span>
+    <div class="row" ng-if="item.addFolder">
+        <input type="text"
+               placeholder="Folder Name..."
+               on-enter="newFolder(item, name)"
+               ng-model="name">
+        <button ng-click="newFolder(item, name);"
+                class="btn btn-xs btn-mini btn-success">
+            add
+        </button>
+        <button ng-click="item.addFolder = false;"
+                class="btn btn-xs btn-mini btn-danger">
+            cancel
+        </button>
+    </div>
 
     <p>
         <span class="label label-info" ng-repeat="tag in ::item.tags" style="margin-right: 5px">
