--- a/website/app/application/core/projects/project/access.html
+++ b/website/app/application/core/projects/project/access.html
@@ -1,21 +1,23 @@
 <div>
     <div class="row">
-        <h4>Group Permissions</h4> <br>
+        <h4>Project Permissions:</h4>
         <div class="col-xs-6">
-            <table class="table table-file-directory">
+            <table class="table table-bordered">
                 <thead>
-                <th>User</th>
+                <th>User who have access to the project</th>
                 <!--<th>Permissions</th>-->
-                <th>Delete</th>
+                <th ng-if="project.owner == signed_in_user"></th>
                 </thead>
                 <tbody>
+                <tr>
+                    <td>{{project.owner}} <i>(owner)</i></td>
+                </tr>
                 <tr ng-repeat="ac in project.users | orderBy: 'user_id'">
                     <td>{{ac.user_id}}</td>
                     <!--<td>{{ac.permissions}}</td>-->
                     <td ng-if="project.owner == signed_in_user">
                         <button ng-click="deleteUser(ac.id)" class="btn btn-danger">Remove</button>
                     </td>
-                    <td ng-if="project.owner !== signed_in_user">Not Authorized</td>
                 </tr>
                 </tbody>
             </table>
