--- a/website/app/index/sidebar.html
+++ b/website/app/index/sidebar.html
@@ -1,5 +1,5 @@
 <div ng-if="isAuthenticated()" class="sidebar" >
     <sidebar-actions></sidebar-actions>
     <sidebar-tags></sidebar-tags>
-    <sidebar-recent></sidebar-recent>
+    <sidebar-recent ng-if="false"></sidebar-recent>
 </div>
