--- a/website/app/index/sidebar-actions.html
+++ b/website/app/index/sidebar-actions.html
@@ -29,9 +29,8 @@
     </div>
 
     <div ng-show="showProjectActions">
-        <a ng-show="false" class="list-group-item"
+        <a  class="list-group-item"
            ui-sref="projects.project.home{id: project.id}"
-           ng-click="toggleActivePanel('home')"
            ng-class="{active: isPanelActive('home')}">
             <i class="fa fa-fw fa-home"></i> Home</a>
 
