--- a/website/app/application/core/projects/project/home/directives/display-sample.html
+++ b/website/app/application/core/projects/project/home/directives/display-sample.html
@@ -7,9 +7,11 @@
     </span>
     <span class="pull-right">
         <a ng-if="showSideboard"
-           ng-click="addToSideboard(sample, $event)"
-           id="{{sample.id}}">
+           ng-click="addToSideboard(sample, $event)">
             <i class="fa fa-fw fa-clipboard inactive"></i>
+        </a>
+        <a ng-if="!showSideboard"  ng-click="remove(sample, $event)">
+            <i class="fa fa-fw fa-close mc-danger"></i>
         </a>
         <i style="color:#E3CF7A" class="fa fa-fw fa-star"></i>
         <i class="fa fa-fw"
@@ -17,7 +19,9 @@
     </span>
 
     <p>
-        <button ng-class="{disabled: sample.show}" ng-if="isActive('samples','addToReview')" class="btn btn-xs btn-mini btn-success" ng-click="addItem('review')">Add to review</button>
+        <button ng-class="{disabled: sample.show}" ng-if="isActive('samples','addToReview')"
+                class="btn btn-xs btn-mini btn-success" ng-click="addItem('review')">Add to review
+        </button>
         <!--<button ng-if="isActive('samples','addToProvenance')" class="btn btn-xs btn-mini btn-success" ng-click="addItem('provenance')">Add to Provenance</button>-->
         <!--<button ng-if="isActive('samples','addToNote')" class="btn btn-xs btn-mini btn-success" ng-click="addItem('note')">Add to Note</button>-->
     </p>
